--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,12 @@
 <html>
 {% include head.html %}
 	<body>
-		<div id="container">
-			<div class="inner">
+		<div class="page-wrapper">
 				{% include header.html %}
 
 				{{ content }}
 
 				{% include footer.html %}
-			</div>
 		</div>
 	</body>
 </html>
