--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,41 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <title>Sirius by Comcast</title>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-50310133-1', 'comcast.github.io');
-  ga('send', 'pageview');
-
-</script>
-  </head>
-
-  <body>
-    <div id="container">
-      <div class="inner">
-
         <header>
           <h1>Sirius</h1>
           <h2>A distributed system library for managing application reference data</h2>
         </header>
 
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/Comcast/sirius/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/Comcast/sirius/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/Comcast/sirius" id="view-on-github" class="button"><span>View on GitHub</span></a>
+        <section>
+          <a href="https://github.com/Comcast/sirius/zipball/master" id="download-zip">Download .zip</a>
+          <a href="https://github.com/Comcast/sirius/tarball/master" id="download-tar-gz">Download .tar.gz</a>
+          <a href="https://github.com/Comcast/sirius" id="view-on-github">View on GitHub</a>
         </section>
 
         <hr>
