Updating with current content and new markup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,6 @@
-        <header>
-          <h1>Sirius</h1>
-          <h2>A distributed system library for managing application reference data</h2>
-        </header>
-
-        <section>
-          <a href="https://github.com/Comcast/sirius/zipball/master" id="download-zip">Download .zip</a>
-          <a href="https://github.com/Comcast/sirius/tarball/master" id="download-tar-gz">Download .tar.gz</a>
-          <a href="https://github.com/Comcast/sirius" id="view-on-github">View on GitHub</a>
-        </section>
-
-        <hr>
+<header>
+  <a href="http://www.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
+  <a href="http://www.comcast.com">Corporate</a>
+  <a href="http://www.github.com/Comcast">Open Source</a>
+  <a href="http://www.xfinitytv.comcast.net">Entertainment</a>
+</header>
