Initial draft of homepage styling and layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
-<header>
-  <a href="http://www.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
-  <a href="http://www.comcast.com">Corporate</a>
-  <a href="http://www.github.com/Comcast">Open Source</a>
-  <a href="http://www.xfinitytv.comcast.net">Entertainment</a>
-</header>
+<div class="textured-background global-padding">
+    <header>
+        <a class="logo" href="http://www.comcast.com"><img src="images/comcast-logo.png" alt="Comcast logo"></a>
+        <nav class="global-padding">
+            <a class="nav-item link" href="http://www.comcast.com">Corporate</a>
+            <a class="nav-item link" href="http://www.github.com/Comcast">Open Source</a>
+            <a class="nav-item link" href="http://www.xfinitytv.comcast.net">Entertainment</a>
+        </nav>
+    </header>
