--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,2 +1,187 @@
+/* html { font-size: 62.5%; } */
+/* This CSS resource incorporates links to font software which is the valuable copyrighted property of Webtype L
+LC and/or its suppliers. You may not attempt to copy, install, redistribute, convert, modify or reverse engineer this
+font software. Please contact Webtype with any questions regarding Web Fonts:
+http://www.webtype.com
+ */
+@font-face {
+  font-family: 'XFINITYSansRegMedium';
+  src: url("/styles/fonts/xfinitysans-med-webfont.eot");
+  src: url("/styles/fonts/xfinitysans-med-webfont.eot?#iefix") format("embedded-opentype"), url("/styles/fonts/xfinitysans-med-webfont.woff") format("woff"), url("/styles/fonts/xfinitysans-med-webfont.ttf") format("truetype"); }
+@font-face {
+  font-family: 'XFINITYSansLgtRegular';
+  src: url("/styles/fonts/xfinity_sans_light_71113.eot");
+  src: url("/styles/fonts/xfinity_sans_light_71113.eot?#iefix") format("embedded-opentype"), url("/styles/fonts/xfinity_sans_light_71113.woff") format("woff"), url("/styles/fonts/xfinity_sans_light_71113.ttf") format("truetype"); }
+@font-face {
+  font-family: 'XFINITYSansThinRegular';
+  src: url("/styles/fonts/hinted-web-versions/XFINITY-Sans-Thin/34b618d9-a5ad-4b74-9dbd-228493df8bc7-4.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+html {
+  font-size: 62.5%; }
+
 body {
-  color: red; }
+  width: 100%;
+  font-family: XFINITYSansLgtRegular; }
+
+a {
+  text-decoration: none; }
+
+ul {
+  padding: 0; }
+
+.global-padding {
+  padding-right: 5%;
+  padding-left: 5%;
+  padding-top: 3%;
+  padding-bottom: 5%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.white {
+  color: white; }
+
+.body-copy {
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 28px;
+  line-height: 2.8rem; }
+
+.logo {
+  position: relative;
+  bottom: 12px;
+  bottom: 1.2rem; }
+
+nav {
+  position: absolute;
+  right: 0;
+  top: 0; }
+
+.link {
+  color: #0085cb;
+  font-size: 16px;
+  font-size: 1.6rem;
+  font-family: XFINITYSansRegMedium; }
+
+.nav-item {
+  padding-right: 20px;
+  padding-right: 2rem; }
+
+.module > p {
+  max-width: 690px;
+  max-width: 69rem;
+  text-align: center; }
+
+.textured-background {
+  background: url(/images/top-background.jpg) no-repeat fixed;
+  background-size: cover; }
+
+.centered {
+  margin: 0 auto; }
+
+.headline-large {
+  font-family: XFINITYSansThinRegular;
+  text-align: center;
+  font-size: 120px;
+  font-size: 12rem;
+  margin: 55px 55px;
+  margin: 5.5rem 5.5rem; }
+
+.button-wrapper {
+  max-width: 50%;
+  padding-left: 15.0015%; }
+
+.button {
+  display: inline-block;
+  font-size: 22px;
+  font-size: 2.2rem;
+  padding: 5px 10px 15px 10px;
+  padding: 0.5rem 1rem 1.5rem 1rem;
+  margin-right: 30px;
+  margin-right: 3rem;
+  margin-top: 60px;
+  margin-top: 6rem; }
+  .button:hover, .button:focus {
+    background-color: #94a0a6;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
+    border-radius: 0.5rem; }
+  .button:before {
+    margin-right: 10px;
+    position: relative;
+    top: 8px; }
+
+.download:before {
+  content: url("/images/arrow-down.png"); }
+
+.go:before {
+  content: url("/images/arrow-right.png"); }
+
+.featured-content {
+  background-color: #e2ad27; }
+
+.headline-small {
+  padding-bottom: 1.5%;
+  font-size: 28px;
+  font-size: 2.8rem;
+  text-align: center; }
+
+.tiles {
+  text-align: center;
+  margin: 0 0;
+  padding: 0 0; }
+  .tiles > li {
+    display: inline-block;
+    vertical-align: top; }
+  .tiles li {
+    list-style: none; }
+
+.tile {
+  padding: 0 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width: 300px;
+  max-width: 30rem;
+  margin-right: 100px;
+  margin-right: 10rem; }
+
+.one:before {
+  content: url(/images/icon-lightning.png); }
+
+.two:before {
+  content: url(/images/icon-replication.png); }
+
+.three {
+  margin-right: 0; }
+  .three:before {
+    content: url(/images/icon-computer.png); }
+
+hr {
+  background: rgba(0, 0, 0, 0.15);
+  width: 85%;
+  height: 1px;
+  border: none;
+  margin-bottom: 5rem;
+  margin-top: 5rem; }
+
+.centered-list {
+  list-style: none;
+  text-align: center;
+  margin: 0; }
+
+footer {
+  background-color: #212121; }
+  footer ul {
+    padding-top: 100px; }
+  footer li {
+    display: inline-block;
+    vertical-align: top; }
+  footer img {
+    position: relative;
+    bottom: 40px; }
+
+.footer-copy {
+  font-size: 1.6rem;
+  font-family: XFINITYSansRegMedium; }
