--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,4 +6,5 @@
             <a class="nav-item link" href="http://www.github.com/Comcast">Open Source</a>
             <a class="nav-item link" href="http://www.xfinitytv.comcast.net">Entertainment</a>
         </nav>
+        <h1 class="headline-large white centered">Sirius</h1>
     </header>
