Fixing site footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="white footer-copy">
-    <ul class="centered-list">
+<footer class="module white footer-copy">
+    <ul class="centered">
         <li>Sirius is maintained by <a class="link" href="https://github.com/Comcast">Comcast</a></li>
         <li><a href="http://www.github.com/comcast"><img src="images/octocat.png" alt="github logo"></a></li>
         <li>This site was made with <a class="link" href="http://pages.github.com">GitHub Pages</a></li>
